--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ actix-multipart = "0.6.1"
 sanitize-filename = "0.5.0"
 derive_more = "0.99.17"
 
-
 [dependencies.uuid]
 version = "1.8.0"
 features = [
@@ -32,3 +31,14 @@ features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
+
+[dev-dependencies]
+tokio-test = "0.4"
+actix-rt = "2.8"
+sea-orm = { version = "0.12", features = ["mock"] }
+serde_json = "1.0"
+criterion = { version = "0.5", features = ["html_reports"] }
+mockall = "0.12"
+futures = "0.3"
+tokio = { version = "1.0", features = ["full"] }
+
